# serverless-python-example

./: .flake8  .gitignore  Makefile  README.md  docker-compose.yml  localstack_endpoints.json  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
api/: openapi.yml
docs/adl/: 0000_ADR_Initialization_agrement_1.10.2021.md
src/handlers/: handler.py
