[tool.poetry]
name = "serverless python by example"
version = "1.0.0"
description = "Serverless Python by example"
authors = [ "Mateusz Kubaszek" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mangum = "0.12.3"
fastapi = "0.70"

[tool.poetry.dev-dependencies]
uvicorn = "0.15"
awscli-local = "0.16"
pytest = "^6.2.5"
requests = "^2.26.0"
